# nylon-ring

./: AGENTS.md  Cargo.toml  Makefile  README.md
crates/nylon-ring/: Cargo.toml
crates/nylon-ring-host/: Cargo.toml
crates/nylon-ring-host/benches/: host_overhead.rs
crates/nylon-ring-host/src/: callbacks.rs  context.rs  extensions.rs  lib.rs  sid.rs  types.rs
crates/nylon-ring/benches/: abi_types.rs
crates/nylon-ring/src/: lib.rs
examples/: README.md
examples/ex-nyring-host/: Cargo.toml
examples/ex-nyring-host/src/: benchmark.rs  main.rs
examples/ex-nyring-plugin/: Cargo.toml
examples/ex-nyring-plugin/src/: lib.rs
nylon-ring-bench/: Cargo.toml
nylon-ring-bench-plugin/: Cargo.toml
nylon-ring-bench-plugin/src/: lib.rs
nylon-ring-bench/benches/: abi_types.rs  host_overhead.rs  stress_test.rs
nylon-ring-go/: README.md
nylon-ring-go/abi/: types.go
nylon-ring-go/plugin-bench/: build.sh  go.mod  main.go
nylon-ring-go/plugin-example/: build.sh  go.mod  main.go
nylon-ring-go/plugin-example-simple/: build.sh  go.mod  main.go
nylon-ring-go/sdk/: README.md  c_bindings.go  go.mod  plugin.go
nylon-ring-host/: Cargo.toml
nylon-ring-host/examples/: bidirectional_go_host.rs  bidirectional_host.rs  go_plugin_host.rs  go_plugin_host_lowlevel.rs  simple_host.rs  streaming_host.rs
nylon-ring-host/src/: error.rs  extensions.rs  lib.rs
nylon-ring-host/tests/: bidirectional_test.rs  raw_call.rs  raw_stream_go_test.rs  raw_stream_test.rs
nylon-ring-plugin-example/: Cargo.toml
nylon-ring-plugin-example/src/: lib.rs
nylon-ring/src/: lib.rs
src/: lib.rs
