[workspace]
members = [
    "crates/nylon-ring",
    "crates/nylon-ring-host", "examples/ex-nyring-host", "examples/ex-nyring-plugin",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
libloading = "0.9"
thiserror = "2"
log = "0.4"
dashmap = "6.1"
rustc-hash = "2.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true